// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should match snapshots 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-0"
      mask={[Function]}
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 2`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
  width: 24px;
}

.c1 {
  position: relative;
}

.c3 {
  width: 24px;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-1"
      mask={[Function]}
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value="foo"
    />
    
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 c3"
      description=""
      focusable="false"
      onClick={[Function]}
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#fff5f5",
              "300": "#f88e86",
              "500": "#ec584e",
              "700": "#e91b0c",
              "900": "#ac001a",
            },
            "neutral": Object {
              "0": "#ffffff",
              "100": "#f2f2f2",
              "1000": "#000000",
              "300": "#e0e0e0",
              "500": "#999999",
              "700": "#424242",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#E5EDFC",
              "300": "#89AAE7",
              "500": "#0CC0EA",
              "700": "#1250C4",
              "900": "#002F7B",
            },
            "secondary": Object {
              "100": "#F7B0C8",
              "300": "#F278A1",
              "500": "#E91E63",
              "700": "#DE0059",
              "900": "#9E003F",
            },
            "success": Object {
              "100": "#dcedc8",
              "300": "#c9eda2",
              "500": "#7ed321",
              "700": "#3b610f",
              "900": "#004D40",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#ffda6a",
              "500": "#ffc107",
              "700": "#f09100",
              "900": "#d14900",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 3`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
}

.c2 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="input-2"
  >
    Text label
  </label>
  
  <div
    className="c2"
  >
    <input
      id="input-2"
      mask={[Function]}
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 4`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c4 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
  width: 24px;
  color: #e91b0c;
}

.c1 {
  position: relative;
}

.c3 {
  width: 24px;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-3"
      mask={[Function]}
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 c3"
      description=""
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#fff5f5",
              "300": "#f88e86",
              "500": "#ec584e",
              "700": "#e91b0c",
              "900": "#ac001a",
            },
            "neutral": Object {
              "0": "#ffffff",
              "100": "#f2f2f2",
              "1000": "#000000",
              "300": "#e0e0e0",
              "500": "#999999",
              "700": "#424242",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#E5EDFC",
              "300": "#89AAE7",
              "500": "#0CC0EA",
              "700": "#1250C4",
              "900": "#002F7B",
            },
            "secondary": Object {
              "100": "#F7B0C8",
              "300": "#F278A1",
              "500": "#E91E63",
              "700": "#DE0059",
              "900": "#9E003F",
            },
            "success": Object {
              "100": "#dcedc8",
              "300": "#c9eda2",
              "500": "#7ed321",
              "700": "#3b610f",
              "900": "#004D40",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#ffda6a",
              "500": "#ffc107",
              "700": "#f09100",
              "900": "#d14900",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </svg>
    
  </div>
  
  <span
    className="c4"
  >
    Error message
  </span>
</div>
`;

exports[`Input component should match snapshots 5`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-4"
      mask={[Function]}
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={true}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 6`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
  width: 24px;
  pointer-events: none;
  left: 16px;
}

.c1 {
  position: relative;
}

.c3 {
  width: 24px;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 c3"
      description=""
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#fff5f5",
              "300": "#f88e86",
              "500": "#ec584e",
              "700": "#e91b0c",
              "900": "#ac001a",
            },
            "neutral": Object {
              "0": "#ffffff",
              "100": "#f2f2f2",
              "1000": "#000000",
              "300": "#e0e0e0",
              "500": "#999999",
              "700": "#424242",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#E5EDFC",
              "300": "#89AAE7",
              "500": "#0CC0EA",
              "700": "#1250C4",
              "900": "#002F7B",
            },
            "secondary": Object {
              "100": "#F7B0C8",
              "300": "#F278A1",
              "500": "#E91E63",
              "700": "#DE0059",
              "900": "#9E003F",
            },
            "success": Object {
              "100": "#dcedc8",
              "300": "#c9eda2",
              "500": "#7ed321",
              "700": "#3b610f",
              "900": "#004D40",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#ffda6a",
              "500": "#ffc107",
              "700": "#f09100",
              "900": "#d14900",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
      />
    </svg>
    <input
      id="input-5"
      mask={[Function]}
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="search"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 7`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      disabled={true}
      id="input-6"
      mask={[Function]}
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 8`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  color: #424242;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-7"
      mask={[Function]}
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  <span
    className="c2"
  >
    this is a helper text
  </span>
  
</div>
`;

exports[`Input component should match snapshots 9`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  cursor: text;
  display: block;
  font-size: 14px;
  padding: 0;
}

.c2 {
  position: relative;
}

<div
  className="c0"
>
  
  <span
    className="c1"
  >
    this is a description label
  </span>
  <div
    className="c2"
  >
    <input
      id="input-8"
      mask={[Function]}
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 10`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c3 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
  width: 24px;
  pointer-events: none;
  left: 16px;
}

.c1 {
  cursor: text;
  display: block;
  font-size: 14px;
  padding: 0;
}

.c2 {
  position: relative;
}

.c4 {
  width: 24px;
}

<div
  className="c0"
>
  
  <span
    className="c1"
  >
    this is a description label
  </span>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c3 c4"
      description="this is a description label"
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#fff5f5",
              "300": "#f88e86",
              "500": "#ec584e",
              "700": "#e91b0c",
              "900": "#ac001a",
            },
            "neutral": Object {
              "0": "#ffffff",
              "100": "#f2f2f2",
              "1000": "#000000",
              "300": "#e0e0e0",
              "500": "#999999",
              "700": "#424242",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#E5EDFC",
              "300": "#89AAE7",
              "500": "#0CC0EA",
              "700": "#1250C4",
              "900": "#002F7B",
            },
            "secondary": Object {
              "100": "#F7B0C8",
              "300": "#F278A1",
              "500": "#E91E63",
              "700": "#DE0059",
              "900": "#9E003F",
            },
            "success": Object {
              "100": "#dcedc8",
              "300": "#c9eda2",
              "500": "#7ed321",
              "700": "#3b610f",
              "900": "#004D40",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#ffda6a",
              "500": "#ffc107",
              "700": "#f09100",
              "900": "#d14900",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
      />
    </svg>
    <input
      id="input-9"
      mask={[Function]}
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="search"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 11`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-10"
      mask={[Function]}
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder="this input has a placeholder"
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 12`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-11"
      mask={
        Array [
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
        ]
      }
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 13`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-12"
      mask={
        Array [
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "/",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
        ]
      }
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 14`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-13"
      mask={
        Array [
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
        ]
      }
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 15`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-14"
      mask={
        Array [
          /\\\\d/,
          /\\\\d/,
          "/",
          /\\\\d/,
          /\\\\d/,
          "/",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
        ]
      }
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 16`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-15"
      mask={[Function]}
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 17`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
  width: 24px;
}

.c1 {
  position: relative;
}

.c3 {
  width: 24px;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-16"
      mask={[Function]}
      maxLength={255}
      minLength={0}
      onChange={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="password"
      value=""
    />
    
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 c3"
      description=""
      focusable="false"
      onClick={[Function]}
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#fff5f5",
              "300": "#f88e86",
              "500": "#ec584e",
              "700": "#e91b0c",
              "900": "#ac001a",
            },
            "neutral": Object {
              "0": "#ffffff",
              "100": "#f2f2f2",
              "1000": "#000000",
              "300": "#e0e0e0",
              "500": "#999999",
              "700": "#424242",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#E5EDFC",
              "300": "#89AAE7",
              "500": "#0CC0EA",
              "700": "#1250C4",
              "900": "#002F7B",
            },
            "secondary": Object {
              "100": "#F7B0C8",
              "300": "#F278A1",
              "500": "#E91E63",
              "700": "#DE0059",
              "900": "#9E003F",
            },
            "success": Object {
              "100": "#dcedc8",
              "300": "#c9eda2",
              "500": "#7ed321",
              "700": "#3b610f",
              "900": "#004D40",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#ffda6a",
              "500": "#ffc107",
              "700": "#f09100",
              "900": "#d14900",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
      />
    </svg>
    
  </div>
  
  
</div>
`;
